add new projects

--- a/locales/en/projects.json
+++ b/locales/en/projects.json
@@ -21,5 +21,20 @@
   "transyanisDescription": "Transyanis specialized in sea, air and road transport, they transport your goods around the world and will give you tailor-made solutions that will meet your requirements",
   "exportationAndImportation": "Exportation and importation",
   "visitSite": "Visit Site",
-  "seeMore": "See More"
+  "seeMore": "See More",
+  "automation": "Automation",
+  "m2eautomationDescription": "M2E Automation is a leading supplier of products and services for maintenance professionals. Founded in 2015 in Morocco, M2E Automation specializes in electronics and automation and measurement technologies.",
+  "cosmetic": "Cosmetic",
+  "sbeautycareDescription": "Sbeauty Care specializes in creating products infused with the nourishing properties of Argan and Prickly Pear Oils. their range of skin and hair care products are made with organic and sustainable ingredients that are gentle on the skin and free from harmful chemicals.",
+  "digitalProducts": "Digital products",
+  "digitechDescription": "DigiTech provides an online video streaming service which allows clients to browse distinctive offerings of live and on-demand programs.",
+  "onlineTraining": "Online training",
+  "tbothperformanceDescription": "T-Both Performance has consolidated its know-how in the field of professional training. The expertise of their Coach-mentors allows themto offer varied and professional training, meeting the requirements of the job market.",
+  "jelformationsDescription": "JEL FORMATIONS has consolidated its know-how in the field of professional training. The expertise of their Coach-mentors allows themto offer varied and professional training, meeting the requirements of the job market.",
+  "cpfipDescription": "CPFIP has consolidated its know-how in the field of professional training. The expertise of their Coach-mentors allows themto offer varied and professional training, meeting the requirements of the job market.",
+  "noorfesDescription": "In the heart of the magnificent plains of the Fez region, known for the ancestral culture of the olive tree, Noor Fès stretches their orchard enjoying a source of pure mineral water, rich and fertile soil: a winning combination that determines the quality of our fruit and our olive oil with its delicate taste.",
+  "moroccoarganDescription": "The company specializing in the import and marketing of natural and high-quality food products with its unique brand MOROCCO ARGAN. The company established its activities in importing a variety of oils and food products from around the world to Israel and aims to be one of the largest importers in the economy.",
+  "rollingstimesDescription": "Rollings Times is store that offers variety of high quality watches and offers maintenance services such as Repair - cleaning - polish used watches",
+  "fashion": "Fashion",
+  "nadiachellaouiDescription": "Devoured by the desire to create, innovate and decline her pictorial works on fashion accessories, the artist Nadia Chellaoui decides to enter the world of luxury leather goods, in 2017, by giving shape to creations innovative and elegant"
 }
