--- a/locales/fr/projects.json
+++ b/locales/fr/projects.json
@@ -21,5 +21,20 @@
   "transyanisDescription": "Transyan est spécialisé dans le transport maritime, aérien et routier, il transporte vos marchandises dans le monde entier et vous apportera des solutions sur mesure qui répondront à vos exigences",
   "exportationAndImportation": "Exportation et importation",
   "visitSite": "Visitez le site",
-  "seeMore": "Voir plus"
+  "seeMore": "Voir plus",
+  "automation": "Automatisme",
+  "m2eautomationDescription": "M2E Automation est un des principaux fournisseurs de produits et de services pour les professionnels de la maintenance. Fonde e en 2015 au Maroc, M2E Automation se spécialise dans l’e lectronique et les technologies d’automatisation et de mesure.",
+  "cosmetic": "Cosmétique",
+  "sbeautycareDescription": "Sbeauty Care est spécialisé dans la création de produits infusés avec les propriétés nourrissantes des huiles d'argan et de figue de barbarie. leur gamme de produits de soins de la peau et des cheveux est fabriquée avec des ingrédients biologiques et durables, doux pour la peau et exempts de produits chimiques nocifs.",
+  "digitalProducts": "Produits numériques",
+  "digitechDescription": "DigiTech fournit un service de streaming vidéo en ligne qui permet aux clients de parcourir des offres distinctes de programmes en direct et à la demande.",
+  "onlineTraining": "Formation en ligne",
+  "tbothperformanceDescription": "T-Both Performance a consolidé son savoir-faire dans le domaine de la formation professionnelle. L'expertise de leurs Coach-mentors leur permet d'offrir des formations variées et professionnelles, répondant aux exigences du marché du travail.",
+  "jelformationsDescription": "JEL FORMATIONS a consolidé son savoir-faire dans le domaine de la formation professionnelle. L'expertise de leurs Coach-mentors leur permet d'offrir des formations variées et professionnelles, répondant aux exigences du marché du travail.",
+  "cpfipDescription": "CPFIP a consolidé son savoir-faire dans le domaine de la formation professionnelle. L'expertise de leurs Coach-mentors leur permet d'offrir des formations variées et professionnelles, répondant aux exigences du marché du travail.",
+  "noorfesDescription": "Au cœur des magnifiques plaines de la région de Fès, connue pour la culture ancestrale de l'olivier, Noor Fès étend son verger en profitant d'une source d'eau minérale pure, d'un sol riche et fertile : une combinaison gagnante qui détermine la qualité de nos fruits et notre huile d'olive au goût délicat.",
+  "moroccoarganDescription": "L'entreprise spécialisée dans l'importation et la commercialisation de produits alimentaires naturels et de haute qualité avec sa marque unique MAROC ARGAN. La société a établi ses activités dans l'importation d'une variété d'huiles et de produits alimentaires du monde entier en Israël et vise à être l'un des plus grands importateurs de l'économie.",
+  "rollingstimesDescription": "Rollings Times est un magasin qui propose une variété de montres de haute qualité et propose des services d'entretien tels que la réparation - le nettoyage - le polissage des montres d'occasion",
+  "fashion": "Mode",
+  "nadiachellaouiDescription": "Dévorée par l'envie de créer, d'innover et de décliner ses oeuvres picturales sur les accessoires de mode, l'artiste Nadia Chellaoui décide d'entrer dans le monde de la maroquinerie de luxe, en 2017, en donnant forme à des créations innovantes et élégantes."
 }
